# TapDancer

./: .gitignore  README.md  TapDancer.ino  hardware.cpp  hardware.h  relay.cpp  relay.h
include/: gpio.h  hardware.h  led.h  led_controller.h  relay.h  switch.h
src/: gpio.cpp  hardware.cpp  led.cpp  led_controller.cpp  relay.cpp  switch.cpp
tapdancer/: pyproject.toml  tapdancer.py
tapdancer/bluetooth_api/: bt_scanner.py
